# animus-web-ui

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/lib/graphql/: client.ts
wrapper/: Cargo.toml  README.md  plugin.toml
wrapper/src/: backend.rs  config.rs  embed.rs  lib.rs  main.rs  placeholder.html  server.rs
wrapper/tests/: contract.rs
