[package]
name = "animus-web-ui-wrapper"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Animus TransportBackend plugin that serves the bundled React web UI over HTTP"
readme = "README.md"

[[bin]]
name = "animus-web-ui-wrapper"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
animus-plugin-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.8" }
animus-plugin-runtime = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.8" }
animus-transport-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.8" }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
include_dir = "0.7"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
